fixed DynamoDB update logic while adding books to read shelf; changed skip button redirection

--- a/mobypick_app/templates/select_books.html
+++ b/mobypick_app/templates/select_books.html
@@ -163,7 +163,7 @@ function submit(){
 }
 
 function skip(){
-  window.location.href = "{% url 'show_recommendations' %}";
+  window.location.href = "{% url 'profile' %}";
 }
 
 </script>
