added button to Ahab

--- a/mobypick_app/templates/chat.html
+++ b/mobypick_app/templates/chat.html
@@ -9,7 +9,7 @@
     <meta name="description" content="The Foodie Friend - Recommends restaurants based on your preferences!">
     <meta name="author" content="Andrei Papancea">
 
-    <title>Insert funny name</title>
+    <title>Ahab</title>
 
     <!-- Bootstrap core CSS -->
     {% load static %}
@@ -53,7 +53,7 @@
 
           <div class="masthead clearfix">
             <div class="inner">
-              <h3 class="masthead-brand">Book Bot!</h3>
+              <h3 class="masthead-brand">Speak to Ahab, MobyPick's smart recommendation buddy!</h3>
             </div>
           </div>
 
