added profile button in chatbot page

--- a/mobypick_app/templates/chat.html
+++ b/mobypick_app/templates/chat.html
@@ -50,6 +50,7 @@
       <div class="site-wrapper-inner">
 
         <div class="cover-container">
+            <button id="manage-prof-button" onclick="managePrefs()">Profile</button>
 
           <div class="masthead clearfix">
             <div class="inner">
