showing completed button only for want to read books

--- a/mobypick_app/templates/profile.html
+++ b/mobypick_app/templates/profile.html
@@ -212,7 +212,9 @@
                             <p>${book.title}</p>
                             <p>${book.author}</p>
                         </div>
+                        {% if type == 'w' %}
                         <button onclick="markCompleted('${type}', '${book.id}')">Completed!</button>
+                        {% endif %}
                     </div>
                     `;
                     bookList.appendChild(bookDiv);
